--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
+/*
+https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap
+*/
+@import url("googleapis-fonts.css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
 * {
   box-sizing: border-box;
 }
